# coursework-7

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
habit_tracker/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habit_tracker/migrations/: 0001_initial.py  0002_rename_destination_habit_place.py  0003_alter_habit_is_pleasant_alter_habit_is_public_and_more.py  0004_remove_habit_time_of_habit_habit_time_and_more.py  0005_rename_time_habit_time_of_habit.py  0006_alter_habit_time_of_habit.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_telegram_id.py
